# c-playground

./: .gitignore  CMakeLists.txt  README.md  dynamic_array.c  dynamic_array.h  dynamic_array_stack.c  dynamic_array_stack.h  dynamic_array_stack_test.c  dynamic_array_test.c  evaluation.c  evaluation.h  evaluation_test.c
